# cursor-dual-agent-loop

./: .gitignore  CONTRIBUTING.md  README.md  SYNC.md  pyproject.toml
auto/: __init__.py
docs/: ARCHITECTURE.md  DISCOVERABILITY.md  WHY.md
examples/hello-sandbox/: README.md  config.yaml  instruction_for_master  instruction_for_master_to_guide_developer
examples/hello-sandbox/reference/: test_hello.py
orchestrator/: boundary.py  cli_backend.py  config.example.yaml  config.py  dual_agent_loop.py  list_models.py  notify.py  parse.py  prompts.py  sdk_backend.py  state.py  verify_prereqs.py
orchestrator/builtin/: __init__.py  default_escalate.md  default_safety.md  developer_protocol.md  master_protocol.md
scripts/: install-into-repo.sh  sync-from-darkherd.sh  sync-to-darkherd.sh
templates/.cursor/: hooks.json
templates/.cursor/agents/: developer.md  master.md
templates/.cursor/hooks/: allowlist.json  block-destructive-shell.sh  sandbox-boundary.sh
templates/auto/: README.md
templates/auto/guidelines/: developer.md  master.md
templates/auto/orchestrator/: config.example.yaml
templates/auto/runs/: SETUP_LOOP_RUN.md
tests/: test_dual_agent_orchestrator.py
