[project]
name = "cursor-dual-agent-loop"
version = "0.1.0"
description = "Headless master/developer dual-agent autonomous loop for Cursor SDK and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hyper AI Lab" }]
keywords = [
  "cursor",
  "cursor-sdk",
  "cursor-cli",
  "autonomous-coding",
  "multi-agent",
  "agent-orchestration",
  "ai-agents",
  "developer-tools",
  "llm",
  "headless",
  "agentic",
]
dependencies = ["cursor-sdk>=0.1.9", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/Hyper-AI-Lab/cursor-dual-agent-loop"
Documentation = "https://github.com/Hyper-AI-Lab/cursor-dual-agent-loop#readme"
Repository = "https://github.com/Hyper-AI-Lab/cursor-dual-agent-loop"
Issues = "https://github.com/Hyper-AI-Lab/cursor-dual-agent-loop/issues"
